--- a/Zadanie_1_Sudoku.vcxproj
+++ b/Zadanie_1_Sudoku.vcxproj
@@ -88,7 +88,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Smrecek_Sudoku.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt" />
